--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm a fourth-year Economics and Computer Science student at the University of Ottawa, studying in French. Currently, I work as an IT student in Public Services and Procurement Canada in the human capital management solutions branch for the Government of Canada, where I apply my accounting background to support tech initiatives. Inspired by my mother—a self-made finance professional—I'm committed to building a career that advances technology and creates meaningful value in the financial world.
+        <p>I'm a fourth-year Economics and Computer Science student at the University of Ottawa, studying in French. Currently, I work as an IT student in Public Services and Procurement Canada in the human capital management solutions branch for the Government of Canada, where I apply my accounting background to support tech initiatives. I'm committed to building a career that advances technology and creates meaningful value in the financial world.
             I look forward to connecting with others with a vision for tech-driven progress.>
 
     <!-- Projects Section -->
