--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>I'm a fourth-year Economics and Computer Science student at the University of Ottawa, studying in French. Currently, I work as an IT student in Public Services and Procurement Canada in the human capital management solutions branch for the Government of Canada, where I apply my accounting background to support tech initiatives. I'm committed to building a career that advances technology and creates meaningful value in the financial world.
-            I look forward to connecting with others with a vision for tech-driven progress.>
+            I look forward to connecting with others with a vision for tech-driven progress.
 
     <!-- Projects Section -->
     <section id="projects">
