--- a/index.html
+++ b/index.html
@@ -31,17 +31,32 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm a fourth-year Economics and Computer Science student at the University of Ottawa, studying in French. Currently, I work as an IT student in Public Services and Procurement Canada in the human capital management solutions branch for the Government of Canada, where I apply my accounting background to support tech initiatives. I'm committed to building a career that advances technology and creates meaningful value in the financial world.
-            I look forward to connecting with others with a vision for tech-driven progress.</p>
+        <p>I'm a fourth-year student at the University of Ottawa, majoring in Economics with a minor in Computer Science, studying in French. Currently, I work in IT within the human capital management solutions branch at Public Services and Procurement Canada. Here, I leverage my background in accounting to support tech initiatives for the Government of Canada. I am passionate about building a career that advances technology to create meaningful impact in the financial world. I look forward to connecting with others who share a vision for tech-driven progress. My projects are coming soon, but here’s a look at my experience so far.</p>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Project Title 1</h3>
-                <p>Brief description of the project.</p>
-                <a href="https://github.com/yourusername/project1" target="_blank">GitHub</a>
+    <!-- Experience Section -->
+    <section id="Experience">
+        <h2>Experience</h2>
+        <div class="experience-grid">
+            <div class="experience-card">
+                <h3>Technical Advisor & Project Initiator</h3>
+                <h4>Public Services and Procurement Canada | Ottawa, ON</h4>
+                <p>• Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination
+                   • Collaborating with IBM (B2B) to streamline processes, maintain contract precision, and create legal documentation
+                   • Co-initiated a generic mailbox setup for team communication and supported SharePoint site development for PSPC 
+                   • Leading contracting tasks and shadowing the Technical Advisor to enhance project accuracy and compliance
+                   • Ensuring accurate vendor costing, tracking productivity, and managing contracts
+                   • Facilitating budget and pricing meetings for effective project alignment
+                   • Establishing master files and trackers for Task Authorizations and Change Requests
+                   • Developing initial project tracking systems using Excel, OneNote, and SharePoint</p>
+            </div>
+        </div>
+
+        <div class="experience-grid">
+            <div class="experience-card">
+                <h3>Accounting and Finance Assistant</h3>
+                <h4>Andorix Inc. | Toronto, ON</h4>
+                <p>• Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection
+                   • Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One
             </div>
         </div>
     </section>
