Update index.html and styles.css with new portfolio content and styling

--- a/index.html
+++ b/index.html
@@ -36,46 +36,59 @@
 
     <head>
         <style>
-    <head>
-        <style>
-    .about-me {
-        width: 80%;
-        max-width: 600px;
-        margin: 0 auto;
-        text-align: center;
-    }
+            .about-me {
+                width: 80%;
+                max-width: 600px;
+                margin: 0 auto;
+                text-align: center;
+            }
 
-    @media screen and (max-width: 768px) {
-        .about-me {
-            width: 90%;
-        }
-    }
+            @media screen and (max-width: 768px) {
+                .about-me {
+                    width: 90%;
+                }
+            }
+        </style>
+    </head> 
 
     <!-- Experience Section -->
     <section id="Experience">
         <h2>Experience</h2>
-        <div class="experience-grid">
-            <div class="experience-card">
-                <h3>Technical Advisor & Project Initiator</h3>
-                <h4>Public Services and Procurement Canada | Ottawa, ON</h4>
-                <p>• Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination
-                   • Collaborating with IBM (B2B) to streamline processes, maintain contract precision, and create legal documentation
-                   • Co-initiated a generic mailbox setup for team communication and supported SharePoint site development for PSPC 
-                   • Leading contracting tasks and shadowing the Technical Advisor to enhance project accuracy and compliance
-                   • Ensuring accurate vendor costing, tracking productivity, and managing contracts
-                   • Facilitating budget and pricing meetings for effective project alignment
-                   • Establishing master files and trackers for Task Authorizations and Change Requests
-                   • Developing initial project tracking systems using Excel, OneNote, and SharePoint</p>
+        
+        <!-- Job 1-->
+        <div class="experience-card">
+            <div class="experience-header">
+                <span class="company">Public Services and Procurement Canada</span>
+                <span class="department">Human Capital Management Solutions Branch</span>
+                <span class="date">Jan 2024 - Current</span>
             </div>
+            <h3>Technical Advisor & Project Initiator</h3>
+            <p class="team">Vendor Management</p>
+            <ul class="experience-details">
+                <li>Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination</li>
+                <li>Collaborating with IBM (B2B) to streamline processes, maintain contract precision, and create legal documentation</li>
+                <li>Co-initiated a generic mailbox setup for team communication and supported SharePoint site development for PSPC</li>
+                <li>Leading contracting tasks and shadowing the Technical Advisor to enhance project accuracy and compliance</li>
+                <li>Ensuring accurate vendor costing, tracking productivity, and managing contracts</li>
+                <li>Facilitating budget and pricing meetings for effective project alignment</li>
+                <li>Establishing master files and trackers for Task Authorizations and Change Requests</li>
+                <li>Developing initial project tracking systems using Excel, OneNote, and SharePoint</li>
+            </ul>
         </div>
-
-        <div class="experience-grid">
-            <div class="experience-card">
-                <h3>Accounting and Finance Assistant</h3>
-                <h4>Andorix Inc. | Toronto, ON</h4>
-                <p>• Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection
-                   • Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One
+        
+        <!-- Job 2-->
+        <div class="experience-card">
+            <div class="experience-header">
+                <span class="company">Andorix Inc.</span>
+                <span class="department">Finance and Accounting Assistant</span>
+                <span class="date">May 2022 - Aug 2023</span>
             </div>
+            <h3>Accounting and Finance Assistant</h3>
+            <p class="team">Accounts Management</p>
+            <ul class="experience-details">
+                <li>Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection</li>
+                <li>Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One</li>
+            </ul>
         </div>
     </section>
 
