Update index.html and styles.css with new portfolio content and styling

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <style>
             .about-me {
                 width: 80%;
-                max-width: 600px;
+                max-width: 700px;
                 margin: 0 auto;
                 text-align: center;
             }
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 900px) {
                 .about-me {
                     width: 90%;
                 }
@@ -58,12 +58,13 @@
         <!-- Job 1-->
         <div class="experience-card">
             <div class="experience-header">
-                <span class="company">Public Services and Procurement Canada</span>
-                <span class="department">Human Capital Management Solutions Branch</span>
+                <span class="job-title">Technical Advisor & Project Initiator</span>
                 <span class="date">Jan 2024 - Current</span>
             </div>
-            <h3>Technical Advisor & Project Initiator</h3>
-            <p class="team">Vendor Management</p>
+            <div class="company-department">
+                <span class="company">Public Services and Procurement Canada</span>
+                <span class="department">Human Capital Management Solutions Branch</span>
+            </div>
             <ul class="experience-details">
                 <li>Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination</li>
                 <li>Collaborating with IBM (B2B) to streamline processes, maintain contract precision, and create legal documentation</li>
@@ -79,12 +80,12 @@
         <!-- Job 2-->
         <div class="experience-card">
             <div class="experience-header">
-                <span class="company">Andorix Inc.</span>
-                <span class="department">Finance and Accounting Assistant</span>
+                <span class="job-title">Accounting and Finance Assistant</span>
                 <span class="date">May 2022 - Aug 2023</span>
             </div>
-            <h3>Accounting and Finance Assistant</h3>
-            <p class="team">Accounts Management</p>
+            <div class="company-department">
+                <span class="company">Andorix Inc.</span>
+            </div>
             <ul class="experience-details">
                 <li>Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection</li>
                 <li>Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One</li>
