--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p class="about-me">I'm a fourth-year student at the University of Ottawa, majoring in Economics with a minor in Computer Science, studying in French. Currently, I work in IT within the human capital management solutions branch at Public Services and Procurement Canada. Here, I leverage my background in accounting to support tech initiatives for the Government of Canada. I am passionate about building a career that advances technology to create meaningful impact in the financial world. I look forward to connecting with others who share a vision for tech-driven progress. My projects are coming soon, but here’s a look at my experience so far.</p>
+        <p class="about-text">I'm a fourth-year student at the University of Ottawa, majoring in Economics with a minor in Computer Science, studying in French. Currently, I work in IT within the human capital management solutions branch at Public Services and Procurement Canada. Here, I leverage my background in accounting to support tech initiatives for the Government of Canada. I am passionate about building a career that advances technology to create meaningful impact in the financial world. I look forward to connecting with others who share a vision for tech-driven progress. My projects are coming soon, but here’s a look at my experience so far.</p>
     </section>
 
     <head>
