Update index.html and styles.css for portfolio and styles

--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
         </style>
     </head> 
 
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-container">
+            <div class="skill-card">
+                <img src="path/to/html-icon.svg" alt="HTML Icon">
+                <p>HTML</p>
+            </div>
+            <div class="skill-card">
+                <img src="path/to/css-icon.svg" alt="CSS Icon">
+            </div>
+            <div class="skill-card">
+                <img src="path/to/python-icon.svg" alt="Python Icon">
+            </div>
+            <div class="skill-card">
+                <img src="path/to/RStudio-icon.svg" alt="RStudio Icon">
+            </div>
+            <div class="skill-card">
+                <img src="path/to/STATASE-icon.svg" alt="STATASE Icon">
+            </div>
+        </div>
+    </section>
+
     <!-- Experience Section -->
     <section id="Experience">
         <h2>Experience</h2>
