Update index.html for portfolio

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
-    <section id="Experience">
-        <h2>Experience</h2>
+    <!-- Project Section -->
+    <section id="Projects">
+        <h2>Projects</h2>
         
         <!-- Job 1-->
         <div class="experience-card">
