--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         </div>
     </section>
 
-    <!-- Project Section -->
+    <!-- Projects Section -->
     <section id="Projects">
         <h2>Projects</h2>
         
         <!-- Job 1-->
-        <div class="experience-card">
-            <div class="experience-header">
+        <div class="Projects-card">
+            <div class="Projects-header">
                 <span class="job-title">Technical Advisor & Project Initiator</span>
                 <span class="date">Jan 2024 - Current</span>
             </div>
@@ -88,7 +88,7 @@
                 <span class="company">Public Services and Procurement Canada</span>
                 <span class="department">Human Capital Management Solutions Branch</span>
             </div>
-            <ul class="experience-details">
+            <ul class="Projects-details">
                 <li>Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination</li>
                 <li>Collaborating with IBM (B2B) to streamline processes, maintain contract precision, and create legal documentation</li>
                 <li>Co-initiated a generic mailbox setup for team communication and supported SharePoint site development for PSPC</li>
@@ -101,15 +101,15 @@
         </div>
         
         <!-- Job 2-->
-        <div class="experience-card">
-            <div class="experience-header">
+        <div class="Projects-card">
+            <div class="Projects-header">
                 <span class="job-title">Accounting and Finance Assistant</span>
                 <span class="date">May 2022 - Aug 2023</span>
             </div>
             <div class="company-department">
                 <span class="company">Andorix Inc.</span>
             </div>
-            <ul class="experience-details">
+            <ul class="Projects-details">
                 <li>Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection</li>
                 <li>Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One</li>
             </ul>
