Update index.html and styles.css for portfolio and styling

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
+        <div class="projects-grid">
         
         <!-- Job 1-->
         <div class="projects-card">
@@ -99,7 +100,7 @@
                 <li>Developing initial project tracking systems using Excel, OneNote, and SharePoint</li>
             </ul>
         </div>
-        
+
         <!-- Job 2-->
         <div class="projects-card">
             <div class="projects-header">
@@ -113,6 +114,8 @@
                 <li>Handled accounts payable for 50+ vendors, and led accounts receivable management, including aging reviews and collection</li>
                 <li>Assisted in financial statement preparation and maintained updated customer/vendor master files using SAP Business One</li>
             </ul>
+        </div>
+
         </div>
     </section>
 
