Update index.html and styles.css for portfolio and styling

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 <span class="job-title">Technical Advisor & Project Initiator</span>
                 <span class="date">Jan 2024 - Current</span>
             </div>
-            <div class="company-department">
+            <div class="company-branch">
                 <span class="company">Public Services and Procurement Canada</span>
-                <span class="department">Human Capital Management Solutions Branch</span>
+                <span class="branch">Human Capital Management Solutions Branch</span>
             </div>
             <ul class="projects-details">
                 <li>Acting as a Technical Advisor overseeing onboarding, project timelines, and vendor coordination</li>
