Adjusted index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-
-        header nav a.active {
-            color: #eea1c7;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
 
@@ -45,6 +35,7 @@
         <p class="about-text additional">My projects are coming soon, but here’s a look at my experience so far.</p>
     </section>
 
+    <!-- Skills Section -->
     <section id="skills">
         <h2>Skills</h2>
         <div class="skills-container">
@@ -54,15 +45,19 @@
             </div>
             <div class="skill-card">
                 <img src="path/to/css-icon.svg" alt="CSS Icon">
+                <p>CSS</p>
             </div>
             <div class="skill-card">
                 <img src="path/to/python-icon.svg" alt="Python Icon">
+                <p>Python</p>
             </div>
             <div class="skill-card">
                 <img src="path/to/RStudio-icon.svg" alt="RStudio Icon">
+                <p>RStudio</p>
             </div>
             <div class="skill-card">
                 <img src="path/to/STATASE-icon.svg" alt="STATASE Icon">
+                <p>STATASE</p>
             </div>
         </div>
     </section>
@@ -71,7 +66,6 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="projects-grid">
-        
         <!-- Job 1-->
         <div class="projects-card">
             <div class="projects-header">
@@ -100,7 +94,7 @@
                 <span class="job-title">Accounting and Finance Assistant</span>
                 <span class="date">May 2022 - Aug 2023</span>
             </div>
-            <div class="company-department">
+            <div class="company-branch">
                 <span class="company">Andorix Inc.</span>
             </div>
             <ul class="projects-details">
