--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         // Resize canvas to cover the entire document height
         function resizeCanvas() {
             canvas.width = window.innerWidth;
-            canvas.height = Math.max(document.documentElement.scrollHeight, window.innerHeight); // Adjusts to full document height
+            canvas.height = window.innerHeight;
         }
         resizeCanvas();
         window.addEventListener('resize', resizeCanvas);
@@ -185,7 +185,7 @@
         function drawPetal(x, y, size, opacity) {
             ctx.fillStyle = `rgba(255, 182, 193, ${opacity})`; // Light pink with variable opacity
             ctx.beginPath();
-            ctx.ellipse(x, y, size, size / 2, Math.PI / 4, 0, 2 * Math.PI); // Petal shape
+            ctx.ellipse(x, y, size, size * 0.6, Math.PI / 4, 0, 2 * Math.PI); // Petal shape
             ctx.fill();
         }
 
@@ -193,11 +193,11 @@
         function animateFloralBackground() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-            for (let i = 0; i < 10; i++) { // Number of petals per frame
+            for (let i = 0; i < 3; i++) { // Number of petals per frame
                 const x = Math.random() * canvas.width;
                 const y = Math.random() * canvas.height;
-                const size = Math.random() * 20 + 10; // Random size between 10 and 30
-                const opacity = Math.random() * 0.2 + 0.1; // Faint opacity between 0.1 and 0.3
+                const size = Math.random() * 40 + 20; 
+                const opacity = Math.random() * 0.15 + 0.05;
 
                 drawPetal(x, y, size, opacity);
             }
